fix: add box-sizing border-box to navbar to prevent overflow with padding

--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -2,10 +2,11 @@
     position: fixed;
     top: 0;
     width: 100%;
+    box-sizing: border-box;
     background-color: hsl(0, 0%, 14%);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding:20px 20px 20px 20px
+    padding: 20px;
 }
